# content2subs

./: README.md  pyproject.toml
content2subs/: .gitignore  constants.py  generate_srt_for_videos.py  utils.py
